# mold-check

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp
include/: debug_output.h  functions.h  helper.h  struct.h
meshes/: bimba_enlarged.ply  bunny_enlarged.ply
